Perbaikan besar besaran
Dengan Albert di Discord

--- a/readme
+++ b/readme
@@ -1,1 +1,4 @@
-test
+Ini merupakan tugas dari Mata Kuliah Pemrograman Web Dasar dengan latar belakang:
+Kami berinisiatif untuk membuatkan website yang dimana dapat mempromosikan jasa dari divisi Technopreneurship serta cara untuk menghubungi penjual agar dapat mempermudah konsumen dalam mengakses jasa yang disediakan 
+
+Anggota: Dustin Thendean, Albert Vedian Oktaviandy
